--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
 a {
@@ -22,9 +21,6 @@ a {
 a:hover {
   color: #535bf2;
 }
-* {
-  box-sizing: border-box;
-}
 
 body {
   margin: 0;
@@ -32,12 +28,17 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
 #app {
+  max-width: 1280px;
   margin: 0 auto;
-  padding: 0;
+  padding: 2rem;
   text-align: center;
 }
 
@@ -61,15 +62,12 @@ body {
 .read-the-docs {
   color: #888;
 }
+
 #menu {
-  position: absolute;
-  top: 5px;
-  left: 5px;
   display: flex;
   flex-direction: column;
-  z-index: 10;
-  gap: 10px;
 }
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
