--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
   
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,73 +13,108 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  margin: 0;
+.page {
+  /* inline-size: 100vw; */
+  /* block-size: 100vh; */
+  padding: 0 100px;
+  margin-block: 30px;
+  margin-inline: 30px;
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  justify-content: center;
   align-items: center;
   min-width: 320px;
   min-height: 100vh;
   text-align: center;
 }
 
-header {
-  padding: 1rem;
+.page__content {
+  display: flex;
+  gap: 30px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px;
   font-size: 2rem;
   font-weight: bold;
+  background-color: white;
+  border-radius: 100px;
+  color: black;
 }
 
-nav ul {
+.header__title {
+  margin: 0;
+  font-size: clamp(1.5rem, -1.625rem + 10vw, 4rem);;
+}
+
+
+.nav__list {
   list-style: none;
+  margin: 0;
   padding: 0;
-  display: flex;
-  gap: 1rem;
 }
 
-nav ul li {
+.nav__item {
   display: inline;
 }
 
-button {
-  border-radius: 8px;
+.btn {
+  border-radius: 35px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: clamp(0.75rem, -0.8125rem + 5vw, 2rem);
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+
+.btn:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+
+.btn:focus,
+.btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-#app {
+.game-container {
   border-radius: 100px;
   overflow: hidden;
+  border: 3px solid black;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-footer {
+.header__info {
   display: flex;
   gap: 20px;
   align-items: center;
-  margin-top: auto;
   padding: 1rem;
+  background-color: white;
+  border-radius: 35px;
   font-size: 0.9rem;
-  color: #888;
+  color: black;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.header__link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.header__link:hover {
+  text-decoration: underline;
+}
+
+.header__text {
+  margin: 0;
 }
