--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,7 @@
 }
 
 .page {
-  /* inline-size: 100vw; */
-  /* block-size: 100vh; */
+  height: 93vh;
   padding: 0 100px;
   margin-block: 30px;
   margin-inline: 30px;
@@ -24,8 +23,6 @@
   gap: 20px;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
-  min-height: 100vh;
   text-align: center;
 }
 
@@ -72,6 +69,7 @@
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: white;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -86,6 +84,7 @@
 }
 
 .game-container {
+  /* inline-size: 100%; */
   border-radius: 100px;
   overflow: hidden;
   border: 3px solid black;
@@ -93,6 +92,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.konvajs-content {
+  inline-size: 100px;
+  block-size: 100px;
+  /* scale: 150%; */
 }
 
 .header__info {
@@ -118,3 +123,14 @@
 .header__text {
   margin: 0;
 }
+
+/* .timer {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+} */
