--- a/src/style.css
+++ b/src/style.css
@@ -140,3 +140,34 @@
 .timer__last-try {
   margin-inline-start: 10px;
 }
+
+
+@media (width < 1000px) {
+  .page__content {
+    flex-direction: column;
+  }
+
+  .header {
+    margin-top: 100px;
+    padding: 10px;
+    gap: 0;
+    border-radius: 20px;
+  }
+
+  .header__link {
+    font-size: 12px;
+  }
+
+  .game-container {
+    border-radius: 20px;
+  }
+
+  .timer {
+    border-radius: 20px;
+  }
+
+  .timer__text {
+    font-size: 16px;
+    white-space: nowrap;
+  }
+}
